--- a/public/master.css
+++ b/public/master.css
@@ -1,10 +1,10 @@
 .content {
-  width: 100vw;
-  max-height: 1000px;
+  width: 100%;
+  height: 100%;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   text-align: center;
-  margin: 2% 0;
+  margin: 0;
   padding: 0;
 }
