--- a/public/master.css
+++ b/public/master.css
@@ -1,16 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-}
-
-.content {
+  display: inline-block;
   background: black;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-  margin-top: -63px;
-  padding: 0;
 }
